config/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    # Se estiver usando outro controlador que não o nginx, ajuste as anotações
spec:
  rules:
    - host: app.local # Você pode adicionar esta entrada no arquivo /etc/hosts
      http:
        paths:
          - path: /api(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: transaction-service
                port:
                  number: 3001
          - path: /grafana(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
          - path: /prometheus(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: prometheus
                port:
                  number: 9090
          - path: /rabbitmq(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: rabbitmq
                port:
                  number: 15672
---
# Adicione esta entrada no seu arquivo /etc/hosts:
# 127.0.0.1 app.local
